# lxde-svn

./: install-lxde-ubuntu.sh  install-lxde.sh
PCManBox/: README  default.theme
devtools/: lxde-c-style.el
devtools/xml-purge/: build
gtknetcat/: AUTHORS  Makefile.am  README  configure.in  gtknetcat.desktop.in
gtknetcat/data/: wizard.glade
gtknetcat/po/: LINGUAS  POTFILES.in  af.po  ar.po  cs.po  da.po  de.po  es.po  et.po  eu.po  fi.po  fr.po  gtknetcat.pot  hr.po  hu.po  id.po  it.po  ja.po  lt.po  nl.po  nn.po  pl.po  ps.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  ur.po  zh_CN.po  zh_TW.po
gtknetcat/src/: Makefile.am  globals.py.in  gtknetcat.in  gtknetcat.py
lxclip/: Makefile.am  README  configure.in  lxclip.c
lxde-openbox/: Makefile.am  configure.in  lxde-obmenu.c
lxde-openbox/po/: POTFILES.in  hu.po  lxde-obmenu.pot  zh_TW.po
lxde-settings/: AUTHORS  COPYING  Makefile.am  README  build  config  configure.ac
lxde-settings-daemon/: AUTHORS  Makefile  Makefile.am  Makefile.in  autogen.sh  config  config.status  configure  configure.ac
lxde-settings-daemon/man/: Makefile.am
lxde-settings-daemon/src/: Makefile  Makefile.am  Makefile.in  lxde-settings  lxde-settings-daemon  lxde-settings-daemon.c
lxde-settings-daemon/src/.deps/: lxde_settings-lxde-settings.Po  lxde_settings-xsettings-common.Po  lxde_settings-xsettings-manager.Po  lxde_settings-xutils.Po  lxde_settings_daemon-lxde-settings-daemon.Po  lxde_settings_daemon-xsettings-common.Po  lxde_settings_daemon-xsettings-manager.Po  lxde_settings_daemon-xutils.Po
lxde-settings/src/: Makefile.am  lxde-settings.c
lxice/: README
lxice/icons/: app_16x16.xpm  app_32x32.xpm
lxine/: Makefile  actions.c  actions.h  callbacks.c  callbacks.h  globals.h  gtkxine.c  gtkxine.h  lxine  lxine.c  lxine.h  mixer.c  mixer.h
lxine/pixmaps/: black.mpv  pause.xpm  pause2.xpm  play.xpm  playlist.xpm  speaker.xpm  stop.xpm  stop2.xpm
lxlauncher-gmenu/po/: fi.po
lxlauncher-gmenu/src/: lxlauncher.c  misc.c
lxlauncher/po/: fi.po
lxlauncher/src/: lxlauncher.c
lxnetdaemon/: Makefile.am  configure.ac
lxnetdaemon/data/: Makefile.am  lxnetdaemon.conf.in  wificonnect.sh
lxnetdaemon/src/: Makefile.am  lxnetdaemon.c  lxnetdaemon.h
lxnetdaemon/utils/: lxnetctl.c
lxnm/: Makefile.am  configure.ac  protocols
lxnm-applet/: README  configure.ac
lxnm-applet/po/: Makefile.in
lxnm-applet/src/: Makefile.am
lxnm/data/: Makefile.am  ethdown.sh  ethup.sh  iflist.sh  lxnm.conf.in  wificonnect.sh  wifidown.sh  wifiinfo.sh  wifirepair.sh  wifiscan.sh  wifiup.sh
lxnm/debian/: README.Debian  changelog  control  copyright  lxnm.init  rules  watch
lxnm/man/: Makefile.am  lxnm.sgml
lxnm/src/: Makefile.am  handler.c  handler.h  lxnm.c  lxnm.h  misc.c  misc.h  port.h  status.c  status.h  thread.c  thread.h  wireless.c  wireless.h
lxnm/utils/: Makefile.am  lxnetctl.c
lxpanel-plugins/batt/: AUTHORS  README  configure.ac
lxpanel-plugins/batt/po/: ChangeLog  POTFILES.in  af.po  ar.po  cs.po  da.po  de.po  es.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  lt.po  lxpanel-batt.pot  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  ur_PK.po
lxpanel-plugins/batt/src/: batt.c
lxpanel-plugins/cpu/: AUTHORS  README  configure.ac
lxpanel-plugins/cpu/po/: ChangeLog  POTFILES.in  af.po  ar.po  cs.po  da.po  de.po  es.po  et.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  lt.po  lxpanel-cpu.pot  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  ur.po
lxpanel-plugins/deskno/: AUTHORS  README  configure.ac
lxpanel-plugins/example/: README  configure.ac
lxpanel-plugins/gmenu2/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  limpiar_svn
lxpanel-plugins/gmenu2/data/: gtkrc
lxpanel-plugins/gmenu2/po/: ChangeLog  de.po
lxpanel-plugins/gmenu2/src/: Makefile.am  Makefile.in  gmenu-dlg.c  gmenu-dlg.h  gmenu.c  menu.c  menu.h
lxpanel-plugins/kbled/: AUTHORS  README  configure.ac
lxpanel-plugins/netstat/: README  configure.ac
lxpanel-plugins/thermal/: AUTHORS  Makefile.am  README  configure.ac
lxpanel-plugins/volume/: AUTHORS  README  configure.ac
lxpanel-plugins/volumealsa/: Makefile.am  README  configure.ac
lxpanel/data/: Makefile.am
lxpanel/man/: lxpanelctl.sgml
lxpanel/po/: fi.po  hu.po  zh_TW.po
lxpanel/src/: panel.c
lxpic/: lxpic.c
lxsession-edit/: AUTHORS  Makefile.am  README  configure.in  lxsession-edit.desktop.in  lxsession-edit.geany
lxsession-edit/data/: lxsession-edit.glade
lxsession-edit/po/: ChangeLog  LINGUAS  POTFILES.in  af.po  ar.po  cs.po  da.po  de.po  es.po  et.po  eu.po  fi.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  lt.po  lxsession-edit.pot  ms.po  nb.po  nl.po  pl.po  pl_PL.po  ps.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  ur_PK.po  zh_TW.po
lxsession-edit/src/: Makefile.am  lxsession-edit.c
lxsession/po/: da.po
lxshortcut/: ChangeLog  Makefile.am  README  configure.in  configure.in.mine  configure.in.r1198  configure.in.r1199
lxshortcut/data/: choose-icon.glade  lxshortcut.glade
lxshortcut/po/: ChangeLog  LINGUAS  POTFILES.in  af.po  ar.po  cs.po  da.po  de.po  es.po  et.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  lt.po  lxshortcut.pot  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  ur_PK.po  zh_TW.po
lxshortcut/src/: Makefile.am  lxshortcut.c
lxsys-nettool/: README  configure.ac  configure.ac.mine
lxsys-nettool/po/: ChangeLog  POTFILES.in  ar.po  cs.po  da.po  de.po  es.po  et.po  fi.po  fr.po  hr.po  hu.po  id.po  it.po  lt.po  lxsys-nettool.pot  lxsys-nettool.pot.mine  lxsys-nettool.pot.r1199  pl.po  ps.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  uk.po  zh_CN.po
lxsys-nettool/src/: Makefile.am  lxsys-nettool.c  lxsys-nettool.h
lxvt/: Makefile.am  README  configure.ac
lxvt/po/: ChangeLog  POTFILES.in  de.po
lxvt/src/: Makefile.am  glib-mem.h  lxvt.c  term.c  term.h  window.c  window.h
trans-purge/: Makefile  build  desktop-purge.c  gconf-purge.c  mime-purge.c
(+199 files in other folders)
