AC_INIT(src/gtknetcat.py)

dnl AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gtknetcat, 0.1)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.21])

dnl check for python
dnl AM_PATH_PYTHON(2.2)
AM_PATH_PYTHON

#PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
#AC_SUBST(PYGTK_CFLAGS)
#AC_SUBST(PYGTK_LIBS)

ALL_LINGUAS="af ar cs da de es et eu fa fi fr gl hr hu id it ja ko lt ml nb nl nn pl ps pt pt_BR ru sk sl sv tr uk ur ur_PK vi zh_CN zh_TW"

GETTEXT_PACKAGE=gtknetcat
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])

AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/gtknetcat
src/Makefile
src/globals.py
po/Makefile.in
])
